# py-todo-app

./: .gitignore  README.md  pyproject.toml  schema.sql
src/py_todo_app/: __main__.py  core.py  todo.py  utils.py
tests/: test_utils.py
