[project]
name = "py-todo-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]

[project.scripts]
py_todo_app = "py_todo_app.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_todo_app"]

